--- a/ansible.cfg
+++ b/ansible.cfg
@@ -20,6 +20,6 @@ force_valid_group_names = ignore
 ansible_python_interpreter = /usr/bin/python3
 
 [ssh_connection]
-pipelining = True
+pipelining = False
 ssh_args = -o ControlMaster=auto -o ControlPersist=5m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
 control_path = ~/.ssh/ansible-%%r@%%h:%%p
