--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -57,20 +57,20 @@ slurm_cluster_install_singularity: no
 # Default exports:
 # - /home: shared home directories, needed for Open OnDemand and best practice
 # - /sw:   shared space for software installs, used for Spack or EasyBuild
-#nfs_exports:
-#  - path: /home
-#    options: "*(rw,sync,no_root_squash)"
-#  - path: /sw
-#    options: "*(rw,sync,no_root_squash)"
-#nfs_mounts:
-#  - mountpoint: /home
-#    server: '{{ groups["slurm-master"][0] }}'
-#    path: /home
-#    options: async,vers=3
-#  - mountpoint: /sw
-#    server: '{{ groups["slurm-master"][0] }}'
-#    path: /sw
-#    options: async,vers=3
+nfs_exports:
+  - path: /home
+    options: "*(rw,sync,no_root_squash)"
+  - path: /sw
+    options: "*(rw,sync,no_root_squash)"
+nfs_mounts:
+  - mountpoint: /home
+    server: '{{ groups["slurm-master"][0] }}'
+    path: /home
+    options: async,vers=3
+  - mountpoint: /sw
+    server: '{{ groups["slurm-master"][0] }}'
+    path: /sw
+    options: async,vers=3
 
 # Flags for enable/disable of NFS deployment
 #  - Set up an NFS server on nfs-server?
@@ -86,7 +86,7 @@ nfs_client_group: "slurm-master[1:],slurm-node"
 # SOFTWARE MODULES (SM)                                                        #
 #   May be built with either EasyBuild or Spack                                #
 ################################################################################
-slurm_install_lmod: true
+slurm_install_lmod: false
 
 # Note: the sm_prefix must be in an NFS-shared location
 sm_prefix: "/sw"
