--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 collections_paths = ./collections
-roles_path = ./roles/galaxy:./roles:./submodules/kubespray/roles
+roles_path = ~/.ansible/roles:./roles/galaxy:./roles:./submodules/kubespray/roles
 library = ./submodules/kubespray/library
 inventory = ./config/inventory
 host_key_checking = False
