--- a/roles/slurm/defaults/main.yml
+++ b/roles/slurm/defaults/main.yml
@@ -17,7 +17,7 @@ slurm_configure:  './configure --prefix={{ slurm_install_prefix }} --disable-dep
 slurm_force_rebuild: no
 slurm_contain_ssh: yes
 
-slurm_cluster_name: deepops
+slurm_cluster_name: kosmos
 slurm_username: slurm
 slurm_password: ReplaceWithASecurePasswordInTheVault
 slurm_user_uid: 22078
