--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -150,4 +150,5 @@ GresTypes=gpu
 # TODO: automatically define the partitions by resource
 # TODO: set DefMemPerCPU = TotalMemory / LogicalCPUs
 {% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
-PartitionName=batch Nodes=ALL Default=YES DefMemPerCPU=0 State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ slurm_max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%}
+PartitionName=batch Nodes=ALL Default=YES DefMemPerCPU=0 State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ slurm_max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ slurm_def_mem_per_cpu }} {%- else %}{% endif -%}
+
