--- a/config/helm/monitoring-no-persist.yml
+++ b/config/helm/monitoring-no-persist.yml
@@ -43,7 +43,7 @@ alertmanager:
     nodePort: 30400
 
 grafana:
-  adminPassword: deepops
+  adminPassword: kosmos
   ingress:
     enabled: true
     annotations:
