--- a/roles/standalone-container-registry/defaults/main.yml
+++ b/roles/standalone-container-registry/defaults/main.yml
@@ -4,7 +4,7 @@ epel_key_url: "https://getfedora.org/static/fedora.gpg"
 
 standalone_container_registry_image: "registry:2.7"
 standalone_container_registry_port: "5000"
-standalone_container_registry_name: "deepops-registry"
+standalone_container_registry_name: "kosmos-registry"
 
 standalone_container_registry_config_template: "config.yml"
 
