--- a/roles/spack/tasks/main.yml
+++ b/roles/spack/tasks/main.yml
@@ -39,6 +39,13 @@
   - "z00_spack.csh"
   - "z00_spack.zsh"
 
+- name: source zsh profile on login
+  lineinfile:
+    dest: /etc/zsh/zprofile
+    insertafter: EOF
+    line: 'source /etc/profile.d/z00_spack.zsh'
+  register: update_zsh_spack
+
 - name: source spack environment once for initialization
   shell: |
       . /etc/profile.d/z00_spack.sh
