--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -69,7 +69,7 @@ slurm_cluster_install_singularity: yes
 ################################################################################
 # Default exports:
 # - /home: shared home directories, needed for Open OnDemand and best practice
-# - /sw:   shared space for software installs, used for Spack or EasyBuild
+# - /sw:   shared space for software installs, used for Spack
 nfs_exports:
   - path: /home
     options: "*(rw,sync,no_root_squash)"
@@ -97,22 +97,13 @@ nfs_client_group: "slurm-master[1:],slurm-node"
 
 ################################################################################
 # SOFTWARE MODULES (SM)                                                        #
-#   May be built with either EasyBuild or Spack                                #
+#   May be built with Spack                                #
 ################################################################################
 slurm_install_lmod: true
 
 # Note: the sm_prefix must be in an NFS-shared location
 sm_prefix: "/sw"
 
-# Easybuild-specific
-sm_module_root: "{{ sm_prefix }}/modules"
-sm_software_path: "{{ sm_prefix }}/software"
-sm_files_path: "{{ sm_prefix }}/easybuild_files"
-sm_sources_path: "{{ sm_prefix }}/sources"
-sm_build_path: "{{ sm_prefix }}/build"
-sm_files_url: "https://github.com/DeepOps/easybuild_files.git"
-sm_install_default: true
-sm_module_path: "{{ sm_module_root }}/all"
 
 # Spack-specific
 spack_install_dir: "{{ sm_prefix }}/spack"
