--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -61,7 +61,7 @@ slurm_login_on_compute: false
 slurm_configure_etc_hosts: yes
 dns_mode: none
 slurm_cluster_install_cuda: no
-slurm_cluster_install_nvidia_driver: yes
+slurm_cluster_install_nvidia_driver: no  # This does not work well
 slurm_cluster_install_singularity: yes
 
 ################################################################################
