Remove redhat, introduce nvtop

--- a/playbooks/container/nvidia-docker.yml
+++ b/playbooks/container/nvidia-docker.yml
@@ -20,6 +20,6 @@
       include_role:
         name: nvidia.nvidia_docker
       when:
-        - ansible_local['gpus']['count'] and (ansible_distribution == "Ubuntu" or ansible_os_family == "RedHat")
+        - ansible_local['gpus']['count'] and ansible_distribution == "Ubuntu"
         - docker_install | default('yes')
   environment: "{{ proxy_env if proxy_env is defined else {} }}"
