--- a/config/group_vars/all.yml
+++ b/config/group_vars/all.yml
@@ -280,6 +280,12 @@ openmpi_version: 4.0.3
 # Disable cloud-init
 deepops_disable_cloud_init: true
 
+# Default profile when using NVIDIA MIG Manager: https://github.com/NVIDIA/mig-parted
+# see the configurations in ../config/nvidia-mig-config.yml
+mig_manager_profile: kosmos-config-a100-80
+mig_manager_config: /etc/nvidia-mig-manager/config.yml
+mig_manager_hooks: /etc/nvidia-mig-manager/hooks.yaml
+
 ################################################################################
 # Container registry                                                           #
 ################################################################################
