--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -149,6 +149,21 @@ GresTypes=gpu
 # hardcoding the partitions and default memory per node
 # TODO: automatically define the partitions by resource
 # TODO: set DefMemPerCPU = TotalMemory / LogicalCPUs
-{% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
-PartitionName=batch Nodes=ALL Default=YES State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ slurm_max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ slurm_def_mem_per_cpu }} {%- else %}{% endif -%}
 
+{% set partition_nodes = {} %}
+{% for node_name in groups["slurm-node"] %}
+    {% set partition_name = hostvars[node_name]["slurm_partition_name"] -%}
+    {% if partition_name not in partition_nodes %}
+       {% set _=partition_nodes.__setitem__(partition_name, []) %}
+    {% endif %}
+    {% set current_nodes=partition_nodes.__getitem__(partition_name) %}
+    {% set _=current_nodes.append(node_name) %}
+{% endfor %}
+
+# Partition table
+{% for partition_name in partition_nodes %}
+{% set nodenames=partition_nodes[partition_name]|join(",") -%}
+{% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
+PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ slurm_max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ slurm_def_mem_per_cpu }} {%- else %}{% endif -%}
+ # New line
+{% endfor %}
