--- a/roles/ood-wrapper/defaults/main.yml
+++ b/roles/ood-wrapper/defaults/main.yml
@@ -5,9 +5,9 @@ ood_base_dir: /opt/ood
 
 # Cluster configuration
 ood_cluster_config_dir: '{{ ood_config_dir }}/clusters.d'
-ood_cluster_title: "NVIDIA DeepOps Cluster"
-ood_cluster_name: "deepops"         # has to match Slurm cluster name
-ood_default_password: "deepops"
+ood_cluster_title: "Kosmos Cluster"
+ood_cluster_name: "kosmos"         # has to match Slurm cluster name
+ood_default_password: "kosmos"
 ood_install_linuxhost_adapter: yes
 
 ood_build_dir: "/tmp/ood-build"
@@ -23,14 +23,14 @@ ood_install_apps:
 # OOD front page config
 ood_frontpage_config : |
   pun_custom_env:
-    OOD_DASHBOARD_TITLE: "NVIDIA DeepOps Cluster"
+    OOD_DASHBOARD_TITLE: "Kosmos Cluster"
     OOD_BRAND_BG_COLOR: "#76B900"
     OOD_BRAND_LINK_ACTIVE_BG_COLOR: "#333"
     OOD_NAVBAR_TYPE: "inverse"
 
 # Virtual Desktop app configuration
 ood_desktops_dir: /etc/ood/config/apps/bc_desktop
-ood_desktop_app_title: "NVIDIA DeepOps Desktop"
+ood_desktop_app_title: "Kosmos Desktop"
 ood_desktop_app_dir: /var/www/ood/apps/sys/bc_desktop
 ood_desktop_app_def_gpus: 1
 ood_desktop_app_cpus_per_gpu: 2
@@ -60,7 +60,7 @@ ood_linuxhost_adapter_config: |
   ---
   v2:
     metadata:
-      title: "NVIDIA DeepOps Cluster Login Node"
+      title: "Kosmos Cluster Login Node"
       hidden: true
     login:
       host: "localhost"
