--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -3,7 +3,7 @@
 ################################################################################
 # Slurm job scheduler configuration
 # Playbook: slurm, slurm-cluster, slurm-perf, slurm-perf-cluster, slurm-validation
-slurm_version: 22.05.2
+slurm_version: 21.08.8
 slurm_install_prefix: /usr/local
 pmix_install_prefix: /opt/kosmos-cluster/pmix
 hwloc_install_prefix: /opt/kosmos-cluster/hwloc
@@ -175,7 +175,7 @@ allow_user_set_gpu_clocks: no
 # Enroot & Pyxis                                                               #
 ################################################################################
 slurm_install_enroot: yes
-slurm_install_pyxis: yes
+slurm_install_pyxis: yes # Not supported by slurm 22!!
 slurm_pyxis_version: 0.13.0
 
 ################################################################################
