--- a/roles/nvidia-dgx/vars/ubuntu-18.04.yml
+++ b/roles/nvidia-dgx/vars/ubuntu-18.04.yml
@@ -52,7 +52,7 @@ PKGS_COMMON:
   - cachefilesd
   - bash-completion
   - vim
-  - linux-tools-generic
+#  - linux-tools-generic
   - linux-tools-common
   - cmake
   - man-db
