--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -146,9 +146,6 @@ GresTypes=gpu
     State=UNKNOWN
 {% endfor %}
 
-# hardcoding the partitions and default memory per node
-# TODO: automatically define the partitions by resource
-# TODO: set DefMemPerCPU = TotalMemory / LogicalCPUs
 
 {% set partition_nodes = {} %}
 {% for node_name in groups["slurm-node"] %}
@@ -164,6 +161,9 @@ GresTypes=gpu
 {% for partition_name in partition_nodes %}
 {% set nodenames=partition_nodes[partition_name]|join(",") -%}
 {% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
-PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ slurm_max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ slurm_def_mem_per_cpu }} {%- else %}{% endif -%}
- # New line
+{% set memory_per_partition=partition_settings[partition_name]["slurm_def_mem_per_cpu"] %}
+{% set max_job_timelimit=partition_settings[partition_name]["slurm_max_job_timelimit"] %}
+
+# {{ memory_per_partition }} {{ max_job_timelimit }}
+PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ memory_per_partition }} {%- else %}{% endif %}
 {% endfor %}
